--- a/toolkits/springer/packages/springer-expander/scss/50-components/springer-expander.scss
+++ b/toolkits/springer/packages/springer-expander/scss/50-components/springer-expander.scss
@@ -11,25 +11,32 @@
 	border-top: 0;
 }
 
-.c-expander summary {
+.c-expander__details {
+	/* For IE11 (unknown element) */
+	display: block;
+}
+
+.c-expander__summary {
+	cursor: pointer;
+	/* For IE11 (unknown element) */
+	display: block;
 	/* remove marker in Firefox */
 	list-style-type: none;
-	cursor: pointer;
 }
 
 /* remove marker in other browsers */
-.c-expander summary::marker,
-.c-expander summary::-webkit-details-marker {
+.c-expander__summary::marker,
+.c-expander__summary::-webkit-details-marker {
 	display: none;
 }
 
 /* enhance focus styles */
 @supports (text-decoration-color: #000) {
-	.c-expander summary:focus {
+	.c-expander__summary:focus {
 		outline: none;
 	}
 
-	.c-expander summary:focus .c-expander__title {
+	.c-expander__summary:focus .c-expander__title {
 		text-decoration: underline;
 		text-decoration-color: color('action-focus');
 		text-decoration-thickness: 3px;
