--- a/context/brand-context/default/scss/abstracts.scss
+++ b/context/brand-context/default/scss/abstracts.scss
@@ -21,6 +21,7 @@
 @import '20-functions/helpers';
 @import '20-functions/layers';
 @import '20-functions/spacing';
+@import '20-functions/strip-unit';
 
 @import '30-mixins/buttons';
 @import '30-mixins/clearfix';
