--- a/toolkits/global/packages/global-facet/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-facet/scss/10-settings/default.scss
@@ -6,8 +6,8 @@
 $facet--background-color: lightgrey;
 $facet--color: black;
 $facet--font-bold: 700;
-$facet--font-size-small: 1.4rem;
-$facet--font-size: 1.6rem;
+$facet--font-size-small: .875rem;
+$facet--font-size: 1rem;
 $facet--spacing-x-small: spacing(4);
 $facet--spacing-small: spacing(8);
 $facet--spacing-normal: spacing(16);
