Fixes font-sizes in springernature-header component settings

--- a/toolkits/springer/packages/springer-product-header/scss/10-settings/_product-header.scss
+++ b/toolkits/springer/packages/springer-product-header/scss/10-settings/_product-header.scss
@@ -16,5 +16,5 @@ $product-header--cover-width: 96px;
 $product-header--cover-border-radius: 4px;
 $product-header--cover-border: 2px solid white;
 $product-header--cover-box-shadow: 0 0 5px 2px greyscale(50, 0.2);
-$product-header--title-font-size: .333333333333rem;
+$product-header--title-font-size: 1.875rem;
 $product-header--title-line-height: 1.2;
