Update colour map to bring together settings for link and open

--- a/context/brand-context/springer/scss/10-settings/colors/default.scss
+++ b/context/brand-context/springer/scss/10-settings/colors/default.scss
@@ -5,20 +5,38 @@
 
 $context--colors: (
 	'accent': #ee7d11,
-	'corporate': #00285a,
-	'corporate-light': scale-color(#00285a, $lightness: 10%),
-	'error': #c40606,
-	'warning': #fc0,
-	'info': #004b83,
-	'success': #71ab0b,
-	'visited': #a345c9,
 	'action-base': #004b83,
 	'action-light': scale-color(#004b83, $lightness: 10%),
 	'action-dull': #97bfd8,
 	'action-background-base': #ebf6ff,
 	'action-background-light': #f7fbfe,
 	'action-focus': #fc0,
-	'yellow': #ff9
+	'blue': #069,
+	'dark-blue': #173962,
+	'corporate': #00285a,
+	'corporate-light': scale-color(#00285a, $lightness: 10%),
+	'cta-top-color': #4d78af,
+	'cta-bottom-color': #3365a0,
+	'cta-hover-color': #0059c9,
+	'error': #c40606,
+	'warning': #fc0,
+	'info': #004b83,
+	'success': #71ab0b,
+	'visited': #a345c9,
+	'blueberry': #a6d8e7,
+	'grape': #bee188,
+	'lemon': #fece3e,
+	'orange': $context--open-access-color,
+	'steel': #bcd2dc,
+	'soft-steel': #dae5ea,
+	'strawberry': #f59094,
+	'honeydew': #e7f6e6,
+	'ivory': #f4f3e1,
+	'plum': #bfaad9,
+	'yellow': #ff9,
+	'nature-primary': #940720,
+	'nature-secondary': #a12a3f,
+	'nature-tertiary': #d7c8c8
 );
 
 /**
