Remove nature specific colours

--- a/context/brand-context/springer/scss/10-settings/colors/default.scss
+++ b/context/brand-context/springer/scss/10-settings/colors/default.scss
@@ -33,10 +33,7 @@ $context--colors: (
 	'honeydew': #e7f6e6,
 	'ivory': #f4f3e1,
 	'plum': #bfaad9,
-	'yellow': #ff9,
-	'nature-primary': #940720,
-	'nature-secondary': #a12a3f,
-	'nature-tertiary': #d7c8c8
+	'yellow': #ff9
 );
 
 /**
