--- a/toolkits/global/packages/global-card/scss/10-settings/springer.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/springer.scss
@@ -14,4 +14,4 @@ $card--title-font-weight: normal;
 $card--title-heading: h3;
 $card--border-width: 1px;
 $card--border: 1px solid color('action-dull', 0.3);
-$card--box-shadow: 0 0 5px 0 greyscale(50, 0.1);
+$card--box-shadow: none;
