no block links option

--- a/toolkits/global/packages/global-card/demo/index.hbs
+++ b/toolkits/global/packages/global-card/demo/index.hbs
@@ -34,7 +34,7 @@
 {{/with}}
 </ul>
 
-<h2>Portraits (border and content padding removed)</h2>
+<h2>Portraits (<code>noBlockLinks</code> applied)</h2>
 
 <ul class="demo-grid">
 {{#with cardsPortrait}}
