--- a/toolkits/global/packages/global-card/view/global-card.hbs
+++ b/toolkits/global/packages/global-card/view/global-card.hbs
@@ -7,11 +7,11 @@
     <div class="c-card__body">
 		{{#with title}}
         <h3 class="c-card__title"{{#if ../parent.level}} aria-level="{{../parent.level}}"{{/if}}>
-            <a class="c-card__link" href="#">{{.}}</a>
+            <a class="c-card__link{{#if ../parent.noBlockLinks}} c-card__link--no-block-link{{else}}{{#if ../noBlockLink}} c-card__link--no-block-link{{else}}{{/if}}{{/if}}" href="#">{{.}}</a>
         </h3>
 		{{/with}}
 		{{#if summary}}
-        	<div class="c-card__summary">{{summary}}</div>
+        	<div class="c-card__summary">{{{summary}}}</div>
 		{{/if}}
     </div>
 </{{#if parent.noList}}div{{else}}{{#if noListItem}}div{{else}}li{{/if}}{{/if}}>
