--- a/toolkits/global/packages/global-card/demo/index.hbs
+++ b/toolkits/global/packages/global-card/demo/index.hbs
@@ -36,6 +36,18 @@
 {{/with}}
 </ul>
 
+<h3>Subsection with <code>"level": "4"</code></h3>
+
+The above heading is an <code>&lt;h3></code>, meaning <code>"level": "4"</code> should be set for the cards’ titles.
+
+<ul class="demo-grid">
+{{#with cardsLevel4}}
+	{{#each cards}}
+		{{>card parent=..}}
+	{{/each}}
+{{/with}}
+</ul>
+
 <h2>1/1 aspect ratio</h2>
 
 <p>With <code>"aspectRatio": "1 / 1"</code> set.</p>
