--- a/toolkits/springer/packages/springer-listing/demo/index.hbs
+++ b/toolkits/springer/packages/springer-listing/demo/index.hbs
@@ -1,17 +1,23 @@
-<article class="c-listing c-listing--row">
-	<div class="c-listing__text-column">
-		{{#if heading}}
-		<h4 class="c-listing__title" {{#if level}}aria-level="{{level}}" {{/if}}>
-			{{heading}}
-		</h4>
-		{{/if}}
-		<div class="c-listing__text">
-			{{text}}
-		</div>
-	</div>
-	{{#with image}}
-	<div class="c-listing__image">
-		<img src="{{src}}" alt="{{alt}}">
-	</div>
-	{{/with}}
-</article>
+<h2>With authors listed</h2>
+
+{{#with listingsWithAuthors}}
+	{{>listings}}
+{{/with}}
+
+<h2>Without authors</h2>
+
+{{#with listingsWithoutAuthors}}
+	{{>listings}}
+{{/with}}
+
+<h2>With options</h2>
+
+{{#with listingsWithOptions}}
+	{{>listings}}
+{{/with}}
+
+<h3>With options and a heading level of 4</h3>
+
+{{#with listingsWithOptionsLevel4}}
+	{{>listings}}
+{{/with}}
