--- a/toolkits/springer/packages/springer-listing/scss/50-components/_listing.scss
+++ b/toolkits/springer/packages/springer-listing/scss/50-components/_listing.scss
@@ -3,58 +3,58 @@
 	padding: 0;
 }
 
-.c-listing__item {
+.c-listings__item {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1rem;
 }
 
-.c-listing__content {
+.c-listings__content {
 	min-width: $listing--content-min-width;
 	flex-basis: 0;
 	flex-grow: 666;
 }
 
-.c-listing__content > * + * {
+.c-listings__content > * + * {
 	margin-top: $listing--content-spacing;
 }
 
-.c-listing__item +
-.c-listing__item {
+.c-listings__item +
+.c-listings__item {
 	margin-top: spacing(16);
 	padding-top: spacing(16);
 	border-top: 1px solid $listing--text-color-light;
 }
 
-.c-listing__title {
+.c-listings__title {
 	margin-bottom: 0;
 }
 
-.c-listing__title a {
+.c-listings__title a {
 	text-decoration: none;
 }
 
-.c-listing__authors {
+.c-listings__authors {
 	color: #666;
 }
 
-.c-listing__authors-list,
-.c-listing__metadata {
+.c-listings__authors-list,
+.c-listings__metadata {
 	display: inline-flex;
 	flex-wrap: wrap;
 }
 
-.c-listing__authors-list span + span:not(:first-child):not(:last-child)::after {
+.c-listings__authors-list span + span:not(:first-child):not(:last-child)::after {
 	content: ',\00A0';
 }
 
-.c-listing__metadata span:not(:last-child)::after  {
+.c-listings__metadata span:not(:last-child)::after  {
 	content: '';
 	border-left: 2px solid $listing--text-color-light;
 	margin: 0 0.5em;
 }
 
-.c-listing__image {
+.c-listings__image {
 	flex-basis: $listing--image-width;
 	flex-grow: 1;
 	position: relative;
@@ -62,7 +62,7 @@
 	align-self: flex-start;
 }
 
-.c-listing__image img {
+.c-listings__image img {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -70,7 +70,7 @@
 	border: $listing--image-border;
 }
 
-.c-listing__view-options {
+.c-listings__view-options {
 	padding: 0;
 	list-style: none;
 	display: flex;
@@ -80,18 +80,18 @@
 	}
 }
 
-.c-listing__view-options li {
+.c-listings__view-options li {
 	@supports not (gap: 1em) {
 		margin: 0.25em;
 	}
 }
 
-.c-listing__view-options a {
+.c-listings__view-options a {
 	display: flex;
 	align-items: center;
 }
 
-.c-listing__view-options-icon {
+.c-listings__view-options-icon {
 	margin-right: $listing--view-options-icon-margin-right;
 	fill: currentColor;
 }
