heading styles and icon color

--- a/toolkits/global/packages/global-details/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-details/scss/10-settings/default.scss
@@ -1,3 +1,6 @@
 $details--padding: spacing(16);
 $details--icon-margin: spacing(8);
+$details--border-color: currentColor;
+$details--icon-color: currentColor;
 $details--focus-underline-color: currentColor;
+$details--title-font-family: inherit;
