--- a/toolkits/global/packages/global-details/view/details.hbs
+++ b/toolkits/global/packages/global-details/view/details.hbs
@@ -1,7 +1,7 @@
 <{{#if listItem}}li{{else}}div{{/if}} class="c-details">
 	<details {{#if open}}open{{/if}} class="c-details__details">
 		<summary class="c-details__summary">
-			<div class="c-details__header" {{#if headingLevel}}role="heading" aria-level="{{headingLevel}}"{{/if}}>
+			<div class="c-details__header u-h3" {{#if headingLevel}}role="heading" aria-level="{{headingLevel}}"{{/if}}>
 				<svg class="u-icon" width="22" height="22" aria-hidden="true" focusable="false">
 					<use xlink:href="{{iconURL}}"></use>
 				</svg>
