--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -17,7 +17,7 @@ $card--title-spacing: $card--spacing;
 $card--title-font-weight: $context--font-weight-normal;
 $card--title-heading: h4;
 $card--title-letter-spacing: normal;
-$card--image-aspect-ratio: 16 / 9;
+$card--image-aspect-ratio: #{16 / 9};
 
 // --major
 $card--major-font-size: 1rem;
