remove redundant no-js class

--- a/toolkits/springer/packages/springer-header/view/springer-header.hbs
+++ b/toolkits/springer/packages/springer-header/view/springer-header.hbs
@@ -49,7 +49,7 @@
 	{{/if}}
 </header>
 {{#with search}}
-<form role="search" class="c-header__search-form c-header__search-form--no-js" action="{{action}}" id="search" tabindex="-1">
+<form role="search" class="c-header__search-form" action="{{action}}" id="search" tabindex="-1">
 	<div class="c-header__search-field">
 		<label for="search-input">{{inputLabel}}</label>
 		<div class="c-header__search-controls">
