--- a/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
@@ -1,4 +1,5 @@
 .c-submission-details-header {
+	background-color: #fff;
 	font-family: $context--font-family-sans;
 	font-size: 0.75em;
 	margin: 0 0 20px 0;
@@ -66,6 +67,18 @@
 					margin-left: 3px;
 				}
 			}
+		}
+
+		&.corresponding.invalid {
+			&:after {
+				background: $submission-header--author-icon-background-invalid;
+				background-position: -13px 1px;
+				background-size: 30px;
+			}
+		}
+
+		&.invalid {
+			color: $red;
 		}
 	}
 
