--- a/toolkits/nature/packages/nature-section-heading/demo/index.hbs
+++ b/toolkits/nature/packages/nature-section-heading/demo/index.hbs
@@ -1,7 +1,7 @@
 <div>
 	{{> nature-section-heading }}
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis congue augue at pretium. Cras ut erat quam. Maecenas iaculis dolor purus, et accumsan tortor vulputate sed. Quisque vehicula velit lacinia tellus aliquet faucibus. Vestibulum risus tellus, consectetur eget ornare id, dignissim a elit. Nullam in placerat massa. Vivamus a faucibus ligula. Vestibulum molestie, turpis ut aliquet rutrum, sapien dui gravida enim, ullamcorper eleifend urna ante sed erat.</p>
+	<p>The ambitious observatory has arrived at its home — near a gravitationally stable spot called L2 — for a premier view of the Universe.</p>
 
 	{{> nature-section-heading text='Heading Text With Link' url='http://www.example.com' }}
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis congue augue at pretium. Cras ut erat quam. Maecenas iaculis dolor purus, et accumsan tortor vulputate sed. Quisque vehicula velit lacinia tellus aliquet faucibus. Vestibulum risus tellus, consectetur eget ornare id, dignissim a elit. Nullam in placerat massa. Vivamus a faucibus ligula. Vestibulum molestie, turpis ut aliquet rutrum, sapien dui gravida enim, ullamcorper eleifend urna ante sed erat.</p>
+	<p>People abandoned thriving cities in Mesopotamia, the Indus Valley and farther afield at about the same time as a decades-long drought gripped parts of the planet.</p>
 </div>
