update footer link linking

--- a/toolkits/nature/packages/nature-footer/view/footer.hbs
+++ b/toolkits/nature/packages/nature-footer/view/footer.hbs
@@ -4,7 +4,7 @@
 			<h2 aria-level="2" class="u-visually-hidden">{{title}}</h2>
 			<div class="c-footer__header">
 				<div class="c-footer__logo">
-					<img alt="Nature Research" src="../img/{{logo.name}}.svg" loading="lazy" width="{{logo.width}}" height="{{logo.height}}">
+					<img alt="Nature Research" src="{{logo.slug}}" loading="lazy" width="{{logo.width}}" height="{{logo.height}}">
 				</div>
 
 				{{#if footerLinks}}
