--- a/toolkits/springer/packages/springer-box/scss/10-settings/_box.scss
+++ b/toolkits/springer/packages/springer-box/scss/10-settings/_box.scss
@@ -1,7 +1,7 @@
 $box--background-color: white;
 $box--background-color-grey: greyscale(95);
 $box--box-shadow: 0 0 5px 0 greyscale(50, 0.1);
-$box--border: 1px solid color('action-dull', 0.3);
+$box--border: 1px solid greyscale(80);
 $box--line-height: 1.3;
 $box--margin-bottom: spacing(16);
 $box--padding: spacing(16);
