--- a/toolkits/global/packages/global-card/view/global-card.hbs
+++ b/toolkits/global/packages/global-card/view/global-card.hbs
@@ -1,17 +1,21 @@
-<{{#if parent.noList}}div{{else}}{{#if noListItem}}div{{else}}li{{/if}}{{/if}} class="c-card{{#if parent.noShape}} c-card--no-shape{{else}}{{#if parent.portrait}} c-card--no-shape{{else}}{{/if}}{{/if}}">
-	<div class="c-card__image{{#if parent.portrait}} c-card__image--portrait{{/if}}"{{#if parent.aspectRatio}} style="--card--image-aspect-ratio: {{parent.aspectRatio}}"{{/if}}>
+<div class="c-card{{#if noShape}} c-card--no-shape{{/if}}{{#if dark}} c-card--dark{{/if}}">
+	<div class="c-card__image"{{#if aspectRatio}} style="--card--image-aspect-ratio: {{aspectRatio}}"{{/if}}>
 		{{#with image}}
-			<img src="{{src}}" alt="{{alt}}">
+		<img src="{{src}}" alt="{{alt}}">
 		{{/with}}
 	</div>
     <div class="c-card__body">
-		{{#with title}}
-        <h3 class="c-card__title"{{#if ../parent.level}} aria-level="{{../parent.level}}"{{/if}}>
-            <a class="c-card__link{{#if ../parent.noBlockLinks}} c-card__link--no-block-link{{else}}{{#if ../noBlockLink}} c-card__link--no-block-link{{else}}{{/if}}{{/if}}" href="#">{{.}}</a>
-        </h3>
-		{{/with}}
+		<h3 class="c-card__title"{{#if level}} aria-level="{{level}}"{{/if}}>
+			{{#if href}}
+			<a class="c-card__link{{#if noBlockLinks}} c-card__link--no-block-link{{else}}{{#if noBlockLink}} c-card__link--no-block-link{{else}}{{/if}}{{/if}}" href="{{href}}">
+			{{/if}}
+			{{title}}
+			{{#if href}}
+			</a>
+			{{/if}}
+		</h3>
 		{{#if summary}}
-        	<div class="c-card__summary">{{{summary}}}</div>
+        <div class="c-card__summary">{{{summary}}}</div>
 		{{/if}}
     </div>
-</{{#if parent.noList}}div{{else}}{{#if noListItem}}div{{else}}li{{/if}}{{/if}}>
+</div>
