--- a/toolkits/global/packages/global-card/scss/10-settings/springer.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/springer.scss
@@ -13,5 +13,5 @@ $card--dark-color: #fff;
 $card--title-font-weight: normal;
 $card--title-heading: h3;
 $card--border-width: 1px;
-$card--border: 1px solid color('action-dull', 0.3);
+$card--border: 1px solid greyscale(80);
 $card--box-shadow: none;
