--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -3,7 +3,7 @@
  * Base component styles
  */
 
-.c-card {
+ .c-card {
 	display: flex;
 	background-color: $card--background;
 	flex-direction: column;
@@ -57,13 +57,6 @@
 	}
 }
 
-.c-card__image--portrait img {
-	@supports (object-fit: contain) {
-		object-fit: contain;
-		object-position: left bottom;
-	}
-}
-
 .c-card__body {
 	padding: $card--padding;
 	flex: 1 1 auto;
@@ -94,6 +87,11 @@
 			margin-bottom: 0;
 		}
 	}
+
+	a {
+		// WCAG 1.4.1 Use of Color
+		text-decoration: underline;
+	}
 }
 
 .c-card__link:not(.c-card__link--no-block-link) {
@@ -102,13 +100,6 @@
 
 // modifiers
 // ---------
-
-// --flush
-.c-card--flush {
-	.c-card__body {
-		padding: 0;
-	}
-}
 
 // --major
 .c-card--major {
@@ -131,5 +122,11 @@
 
 	.c-card__link {
 		color: inherit;
+	}
+
+	.c-card__summary {
+		a {
+			color: inherit;
+		}
 	}
 }
