Add font family declaration to springernature-user-details
A component should be responsible in how it looks and the fonts it uses
It shouldn't expose or rely on the context in which its being used in
to define how it looks of works.

--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
@@ -1,5 +1,6 @@
 .js .c-user-details {
 	height: 30px;
+	font-family: $context--font-family-sans;
 
 	&__open {
 		@include arrow(map-get($context--colors, medium-blue), down, 4px);
