Add missing functions and mixins to default branding abstracts
While implementing SpringerNature brand-context to OASiS I discovered
that some functions and mixins where not being included in the abstract
mean that a developer would have to manually import these functions.

--- a/context/brand-context/default/scss/abstracts.scss
+++ b/context/brand-context/default/scss/abstracts.scss
@@ -22,7 +22,9 @@
 @import '20-functions/layers';
 @import '20-functions/spacing';
 @import '20-functions/strip-unit';
+@import '20-functions/url-encode';
 
+@import '30-mixins/arrow';
 @import '30-mixins/buttons';
 @import '30-mixins/clearfix';
 @import '30-mixins/container';
