--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -21,6 +21,6 @@ $card--major-font-size: 1rem;
 $card--major-title-heading: h2;
 
 // --dark
-$card--dark-background: color('universal-blue');
+$card--dark-background: #000;
 $card--dark-color: #fff;
 $card--dark-title-color: white;
