--- a/toolkits/global/packages/global-card/scss/10-settings/springernature.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/springernature.scss
@@ -10,3 +10,4 @@
 $card--title-font-weight: $context--font-weight-normal;
 $card--title-heading: h4;
 $card--title-letter-spacing: 0.02em;
+$card--dark-background: color('universal-blue');
